# DocMind

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  category.py  item.py  rule.py  tag.py
backend/app/routers/: __init__.py  categories.py  import_router.py  items.py  search.py
backend/app/schemas/: __init__.py  category.py  item.py  tag.py
backend/app/services/: __init__.py  classifier.py  file_processor.py  init_data.py  storage.py  web_scraper.py
backend/app/utils/: __init__.py  extractors.py
cli/: __init__.py  main.py
cli/commands/: classify.py  import_cmd.py  repo.py  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: FilePreviewModal.vue  ImportModal.vue  ItemCard.vue  MarkdownViewer.vue  SearchBar.vue  Sidebar.vue
frontend/src/router/: index.js
frontend/src/stores/: main.js
frontend/src/views/: Browse.vue  Dashboard.vue  Favorites.vue  Search.vue  Settings.vue
